--- a/src/Playground.css
+++ b/src/Playground.css
@@ -1,6 +1,8 @@
 .Playground {
   box-sizing: border-box;
-  padding: 0 16px;
+  padding: 16px 32px;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .Playground-code {
