--- a/src/Playground.css
+++ b/src/Playground.css
@@ -33,6 +33,9 @@
 .Playground-test-code-header {
   margin-right: 0 !important;
 }
+.Playground-header-menu {
+  padding-right: 0 !important;
+}
 
 .ui.modal.Share-modal {
   text-align: center;
