--- a/src/Playground.css
+++ b/src/Playground.css
@@ -60,3 +60,8 @@
   border: 1px solid #bbb;
   cursor: pointer;
 }
+
+.Playground-result code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
