--- a/src/Playground.css
+++ b/src/Playground.css
@@ -24,6 +24,8 @@
   color: #444;
   font-weight: 600;
   border: 1px solid #666;
+  position: relative;
+  overflow-x: scroll;
 }
 
 .ui.tag.label.Playground-solved {
